--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,8 @@
 		"@emotion/styled": "^11.1.5",
 		"@hookform/error-message": "^2.0.0",
 		"@react-google-maps/api": "^2.18.1",
-		"@tanstack/react-query": "^5.77.0",
+		"@tanstack/react-query": "^5.77.2",
+		"@tanstack/react-table": "^8.21.3",
 		"axios": "^0.20.0",
 		"core-js": "^3.12.1",
 		"date-fns": "^2.16.1",
@@ -45,7 +46,6 @@
 		"react-scroll": "^1.8.7",
 		"react-scroll-into-view": "^1.12.0",
 		"react-select": "^5.4.0",
-		"react-table": "^7.7.0",
 		"react-tippy": "^1.4.0",
 		"react-to-pdf": "^0.0.14",
 		"react-zoom-pan-pinch": "^2.1.3",
@@ -86,7 +86,6 @@
 		"@types/react-mentions": "^4.1.5",
 		"@types/react-pdf": "^5.0.8",
 		"@types/react-select": "^5.0.1",
-		"@types/react-table": "^7.7.6",
 		"@types/uuid": "^8.3.0",
 		"@typescript-eslint/eslint-plugin": "5.58.0",
 		"@typescript-eslint/parser": "5.58.0",
