--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,6 @@
 		"@hookform/error-message": "^2.0.0",
 		"@react-google-maps/api": "^2.18.1",
 		"@tanstack/react-query": "^5.77.2",
-		"@tanstack/react-table": "^8.21.3",
 		"axios": "^0.20.0",
 		"core-js": "^3.12.1",
 		"date-fns": "^2.16.1",
@@ -21,7 +20,7 @@
 		"history": "^5.0.0",
 		"install": "^0.13.0",
 		"lexorank": "^1.0.4",
-		"moment": "^2.29.1",
+		"luxon": "^3.6.1",
 		"normalize.css": "^8.0.1",
 		"npm": "^8.3.0",
 		"polished": "^4.1.1",
@@ -76,6 +75,7 @@
 	},
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
+		"@types/luxon": "^3.6.2",
 		"@types/moment": "^2.13.0",
 		"@types/node": "^12.12.62",
 		"@types/react": "18.0.9",
