--- a/web/package.json
+++ b/web/package.json
@@ -10,12 +10,16 @@
 		"@emotion/react": "^11.1.5",
 		"@emotion/styled": "^11.1.5",
 		"@hookform/error-message": "^2.0.0",
+		"@markerjs/markerjs3": "^3.6.3",
 		"@react-google-maps/api": "^2.18.1",
 		"@tanstack/react-query": "^5.77.2",
+		"@types/jspdf": "^1.3.3",
 		"axios": "^0.20.0",
 		"core-js": "^3.12.1",
 		"firebase": "^10.12.2",
 		"framer-motion": "^4.0.0",
+		"html2canvas": "^1.4.1",
+		"jspdf": "^3.0.1",
 		"lexorank": "^1.0.4",
 		"luxon": "^3.6.1",
 		"polished": "^4.1.1",
@@ -27,7 +31,6 @@
 		"react-dom": "^18.2.0",
 		"react-dropzone": "^11.3.2",
 		"react-hook-form": "7.43.9",
-		"react-image-annotation": "^0.9.10",
 		"react-medium-image-zoom": "^4.3.5",
 		"react-mentions": "^4.3.1",
 		"react-pdf": "^5.4.1",
@@ -36,7 +39,6 @@
 		"react-scroll": "^1.8.7",
 		"react-scroll-into-view": "^1.12.0",
 		"react-select": "^5.4.0",
-		"react-to-pdf": "^0.0.14",
 		"react-zoom-pan-pinch": "^2.1.3",
 		"use-query-params": "^1.2.0",
 		"use-resize-observer": "^7.0.0",
