--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,7 @@
 		"axios": "^0.20.0",
 		"core-js": "^3.12.1",
 		"firebase": "^10.12.2",
-		"framer-motion": "^4.0.0",
+		"framer-motion": "^11.15.0",
 		"html2canvas": "^1.4.1",
 		"jspdf": "^3.0.1",
 		"lexorank": "^1.0.4",
@@ -34,7 +34,8 @@
 		"react-medium-image-zoom": "^4.3.5",
 		"react-mentions": "^4.3.1",
 		"react-pdf": "^5.4.1",
-		"react-router-dom": "^6.0.0-beta.6",
+		"react-router": "^6.30.1",
+		"react-router-dom": "^6.30.1",
 		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.7",
 		"react-scroll-into-view": "^1.12.0",
@@ -42,7 +43,7 @@
 		"react-zoom-pan-pinch": "^2.1.3",
 		"use-query-params": "^1.2.0",
 		"use-resize-observer": "^7.0.0",
-		"uuid": "^8.3.2"
+		"uuid": "^11.1.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
@@ -68,24 +69,24 @@
 	"devDependencies": {
 		"@types/axios": "^0.14.0",
 		"@types/luxon": "^3.6.2",
-		"@types/node": "^12.12.62",
-		"@types/react": "18.0.9",
+		"@types/node": "^22.15.29",
+		"@types/react": "18.2.0",
 		"@types/react-datepicker": "^3.1.7",
-		"@types/react-dom": "^17.0.2",
+		"@types/react-dom": "^18.2.0",
 		"@types/react-mentions": "^4.1.5",
 		"@types/react-pdf": "^5.0.8",
 		"@types/react-select": "^5.0.1",
-		"@types/uuid": "^8.3.0",
-		"@typescript-eslint/eslint-plugin": "5.58.0",
-		"@typescript-eslint/parser": "5.58.0",
+		"@types/uuid": "^10.0.0",
+		"@typescript-eslint/eslint-plugin": "6.16.0",
+		"@typescript-eslint/parser": "6.16.0",
 		"eslint": "8.38.0",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-prettier": "^4.2.1",
+		"eslint-config-prettier": "^9.0.0",
+		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "7.32.2",
 		"eslint-plugin-react-hooks": "4.6.0",
 		"http-proxy-middleware": "^2.0.0",
-		"prettier": "^2.2.1",
+		"prettier": "^3.4.2",
 		"prettier-eslint": "15.0.1",
-		"typescript": "5.0.4"
+		"typescript": "5.4.3"
 	}
 }
