--- a/web/package.json
+++ b/web/package.json
@@ -33,10 +33,9 @@
 		"react-hook-form": "7.43.9",
 		"react-medium-image-zoom": "^4.3.5",
 		"react-mentions": "^4.3.1",
-		"react-pdf": "^5.4.1",
+		"react-pdf": "^9.2.1",
 		"react-router": "^6.30.1",
 		"react-router-dom": "^6.30.1",
-		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.7",
 		"react-scroll-into-view": "^1.12.0",
 		"react-select": "^5.4.0",
@@ -46,13 +45,9 @@
 		"uuid": "^11.1.0"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"eject": "react-scripts eject",
+		"start": "vite",
+		"build": "vite build",
 		"deploy": "export NODE_ENV=production && npm run build && firebase deploy --only hosting"
-	},
-	"eslintConfig": {
-		"extends": "react-app"
 	},
 	"browserslist": {
 		"production": [
@@ -79,14 +74,18 @@
 		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "6.16.0",
 		"@typescript-eslint/parser": "6.16.0",
-		"eslint": "8.38.0",
+		"@vitejs/plugin-react": "^4.3.1",
+		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-react": "7.32.2",
 		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.20",
 		"http-proxy-middleware": "^2.0.0",
 		"prettier": "^3.4.2",
 		"prettier-eslint": "15.0.1",
-		"typescript": "5.4.3"
+		"typescript": "5.4.3",
+		"vite": "^5.4.1",
+		"vite-plugin-svgr": "^4.2.0"
 	}
 }
