--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
 		"@hookform/error-message": "^2.0.0",
 		"@markerjs/markerjs3": "^3.6.3",
 		"@react-google-maps/api": "^2.18.1",
-		"@tanstack/react-query": "^5.77.2",
+		"@tanstack/react-query": "^5.80.6",
+		"@tanstack/react-query-devtools": "^5.80.6",
 		"@types/jspdf": "^1.3.3",
 		"axios": "^0.20.0",
 		"core-js": "^3.12.1",
@@ -47,6 +48,7 @@
 	"scripts": {
 		"start": "vite",
 		"build": "vite build",
+		"preview": "vite preview",
 		"deploy": "export NODE_ENV=production && npm run build && firebase deploy --only hosting"
 	},
 	"browserslist": {
