--- a/web/package.json
+++ b/web/package.json
@@ -1,95 +1,101 @@
 {
-	"name": "web",
-	"version": "1.8.0",
-	"private": true,
-	"dependencies": {
-		"@chakra-ui/icons": "^2.2.4",
-		"@chakra-ui/react": "^2.10.4",
-		"@dnd-kit/core": "^6.3.1",
-		"@dnd-kit/sortable": "^10.0.0",
-		"@emailjs/browser": "^3.10.0",
-		"@emotion/react": "^11.1.5",
-		"@emotion/styled": "^11.1.5",
-		"@hookform/error-message": "^2.0.0",
-		"@markerjs/markerjs3": "^3.6.3",
-		"@react-google-maps/api": "^2.18.1",
-		"@tanstack/react-query": "^5.80.6",
-		"@tanstack/react-query-devtools": "^5.80.6",
-		"@types/jspdf": "^1.3.3",
-		"axios": "^0.20.0",
-		"core-js": "^3.12.1",
-		"firebase": "^10.12.2",
-		"framer-motion": "^11.15.0",
-		"html2canvas": "^1.4.1",
-		"jspdf": "^3.0.1",
-		"lexorank": "^1.0.4",
-		"luxon": "^3.6.1",
-		"polished": "^4.1.1",
-		"query-string": "^6.14.1",
-		"react": "^18.2.0",
-		"react-compound-timer": "^2.0.5",
-		"react-countdown": "^2.3.2",
-		"react-datepicker": "4.11.0",
-		"react-dom": "^18.2.0",
-		"react-dropzone": "^11.3.2",
-		"react-hook-form": "7.43.9",
-		"react-medium-image-zoom": "^4.3.5",
-		"react-mentions": "^4.3.1",
-		"react-pdf": "^9.2.1",
-		"react-router": "^6.30.1",
-		"react-router-dom": "^6.30.1",
-		"react-scroll": "^1.8.7",
-		"react-scroll-into-view": "^1.12.0",
-		"react-select": "^5.4.0",
-		"react-zoom-pan-pinch": "^2.1.3",
-		"use-query-params": "^1.2.0",
-		"use-resize-observer": "^7.0.0",
-		"uuid": "^11.1.0"
-	},
-	"scripts": {
-		"start": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
-		"deploy": "export NODE_ENV=production && npm run build && firebase deploy --only hosting"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"type": "module",
-	"devDependencies": {
-		"@types/axios": "^0.14.0",
-		"@types/luxon": "^3.6.2",
-		"@types/node": "^22.15.29",
-		"@types/react": "18.2.0",
-		"@types/react-datepicker": "^3.1.7",
-		"@types/react-dom": "^18.2.0",
-		"@types/react-mentions": "^4.1.5",
-		"@types/react-select": "^5.0.1",
-		"@types/uuid": "^10.0.0",
-		"@typescript-eslint/eslint-plugin": "6.16.0",
-		"@typescript-eslint/parser": "6.16.0",
-		"@vitejs/plugin-react": "^4.3.1",
-		"eslint": "^8.57.1",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-prettier": "^5.0.0",
-		"eslint-plugin-react": "7.32.2",
-		"eslint-plugin-react-hooks": "4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.20",
-		"http-proxy-middleware": "^2.0.0",
-		"prettier": "^3.4.2",
-		"prettier-eslint": "15.0.1",
-		"typescript": "5.4.3",
-		"vite": "^5.4.1",
-		"vite-plugin-static-copy": "^3.1.0",
-		"vite-plugin-svgr": "^4.2.0"
-	}
+  "name": "web",
+  "version": "1.8.0",
+  "private": true,
+  "dependencies": {
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.10.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@emailjs/browser": "^3.10.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@hookform/error-message": "^2.0.0",
+    "@markerjs/markerjs3": "^3.6.3",
+    "@react-google-maps/api": "^2.18.1",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
+    "@types/jspdf": "^1.3.3",
+    "axios": "^0.20.0",
+    "core-js": "^3.12.1",
+    "firebase": "^10.12.2",
+    "framer-motion": "^11.15.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "lexorank": "^1.0.4",
+    "luxon": "^3.6.1",
+    "polished": "^4.1.1",
+    "query-string": "^6.14.1",
+    "react": "^18.2.0",
+    "react-compound-timer": "^2.0.5",
+    "react-countdown": "^2.3.2",
+    "react-datepicker": "4.11.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^11.3.2",
+    "react-hook-form": "7.43.9",
+    "react-medium-image-zoom": "^4.3.5",
+    "react-mentions": "^4.3.1",
+    "react-pdf": "^9.2.1",
+    "react-router": "^6.30.1",
+    "react-router-dom": "^6.30.1",
+    "react-scroll": "^1.8.7",
+    "react-scroll-into-view": "^1.12.0",
+    "react-select": "^5.4.0",
+    "react-zoom-pan-pinch": "^2.1.3",
+    "use-query-params": "^1.2.0",
+    "use-resize-observer": "^7.0.0",
+    "uuid": "^11.1.0"
+  },
+  "scripts": {
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "export NODE_ENV=production && npm run build && firebase deploy --only hosting"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "type": "module",
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/luxon": "^3.6.2",
+    "@types/node": "^22.15.29",
+    "@types/react": "18.2.0",
+    "@types/react-datepicker": "^3.1.7",
+    "@types/react-dom": "^18.2.0",
+    "@types/react-mentions": "^4.1.5",
+    "@types/react-select": "^5.0.1",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "http-proxy-middleware": "^2.0.0",
+    "msw": "^2.10.4",
+    "prettier": "^3.4.2",
+    "prettier-eslint": "15.0.1",
+    "typescript": "5.4.3",
+    "vite": "^5.4.1",
+    "vite-plugin-static-copy": "^3.1.0",
+    "vite-plugin-svgr": "^4.2.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
