--- a/web/.gitignore
+++ b/web/.gitignore
@@ -28,3 +28,6 @@ yarn-error.log*
 # SpecStory explanation file
 .specstory/
 .specstory/.what-is-this.md
+
+# Sentry Config File
+.env.sentry-build-plugin
