--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
     "@hookform/error-message": "^2.0.0",
     "@markerjs/markerjs3": "^3.6.3",
     "@react-google-maps/api": "^2.18.1",
+    "@sentry/react": "^10.3.0",
+    "@sentry/vite-plugin": "^4.0.2",
     "@tanstack/react-query": "^5.80.6",
     "@tanstack/react-query-devtools": "^5.80.6",
     "@types/jspdf": "^1.3.3",
