--- a/web/package.json
+++ b/web/package.json
@@ -77,6 +77,8 @@
 		"@storybook/addon-onboarding": "^9.1.1",
 		"@storybook/addon-vitest": "^9.1.1",
 		"@storybook/react-vite": "^9.1.1",
+		"@testing-library/jest-dom": "^6.8.0",
+		"@testing-library/react": "^16.3.0",
 		"@types/axios": "^0.14.0",
 		"@types/luxon": "^3.6.2",
 		"@types/node": "^22.15.29",
@@ -99,7 +101,9 @@
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"eslint-plugin-storybook": "^9.1.1",
 		"http-proxy-middleware": "^2.0.0",
+		"jsdom": "^26.1.0",
 		"msw": "^2.10.4",
+		"playwright": "^1.54.2",
 		"prettier": "^3.4.2",
 		"prettier-eslint": "15.0.1",
 		"storybook": "^9.1.1",
@@ -107,8 +111,7 @@
 		"vite": "^5.4.1",
 		"vite-plugin-static-copy": "^3.1.0",
 		"vite-plugin-svgr": "^4.2.0",
-		"vitest": "^3.2.4",
-		"playwright": "^1.54.2"
+		"vitest": "^3.2.4"
 	},
 	"msw": {
 		"workerDirectory": [
